--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "badger-accordion": "^1.1.4",
     "bootstrap": "^4.1.3",
     "bootstrap-sass": "^3.4.0",
     "jquery": "^3.3.1",
+    "jquery-ui": "^1.12.1",
+    "jquery-ui-dist": "^1.12.1",
     "node-sass": "^4.7.2",
     "popper.js": "^1.12.9",
     "slick-carousel": "^1.8.1"
