--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "autoprefixer": "^9.4.2"
+    "autoprefixer": "^9.4.2",
+    "cssnano": "^4.1.7"
   }
 }
